# Inugami

./: Cargo.toml  README.md
src/: lib.rs  svg_generator.rs
