[package]
name = "inugami"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.94"
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
bitcoin = { version = "0.32.4", features = ["rand"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
hex = "0.4"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
